- Fixed: always visible overflow-y (search result)

--- a/static/css/custom-navigation.css
+++ b/static/css/custom-navigation.css
@@ -150,6 +150,7 @@ ul.nav-list.treeview {
   position: absolute;
   z-index: 1000;
   overflow: scroll;
+  overflow-y: visible;
 }
 
 #live-filter-navigationul#content.active { border:1px solid #ccc;background-color: #fff;padding:5px 0; }
